assets/style.css
@import url('https://fonts.googleapis.com/css?family=Raleway:300|Roboto+Slab:300');

@-webkit-keyframes fade-in-dank{
	from{opacity: 0; }
	to{opacity: 1; }
}

@-moz-keyframes fade-in-dank{
	from{opacity: 0;}
	to{opacity: 1;}
}

@-o-keyframes fade-in-dank{
	from{opacity: 0;}
	to{opacity: 1;}
}

@keyframes fade-in-dank{
	from{opacity: 0;}
	to{opacity: 1;}
}

@-webkit-keyframes slide-in{
	from{ -webkit-transform: translateY(-50%); transform: translateY(-50%); }
	to{ -webkit-transform: translateY(0); transform: translateY(0); }
}

@-moz-keyframes slide-in{
	from{ -moz-transform: translateY(-50%); transform: translateY(-50%); }
	to{ -moz-transform: translateY(0); transform: translateY(0); }
}

@-o-keyframes slide-in{
	from{ -o-transform: translateY(-50%); transform: translateY(-50%); }
	to{ -o-transform: translateY(0); transform: translateY(0); }
}

@keyframes slide-in{
	from{ -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); }
	to{ -webkit-transform: translateY(0); -moz-transform: translateY(0); -o-transform: translateY(0); transform: translateY(0); }
}

.fade-in{
  -webkit-animation: 1s fade-in-dank ease-in-out;
     -moz-animation: 1s fade-in-dank ease-in-out;
       -o-animation: 1s fade-in-dank ease-in-out;
          animation: 1s fade-in-dank ease-in-out;
}

.slide-in{
  -webkit-animation: 1s slide-in ease-in-out;
     -moz-animation: 1s slide-in ease-in-out;
       -o-animation: 1s slide-in ease-in-out;
          animation: 1s slide-in ease-in-out;
}


body, html{
  text-align: center;
  padding: 0;
  margin: 0;
	width: 100%;
	height: 100%;
	min-height: 100%;
  background-color: #2B2E3D;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

#attackCard .reg{
  width: 250px;
  margin: 20px;
}

#attackCard{
  margin: 0;
  position: fixed;
  padding-top: calc(50vh - 250px);
  height: 100vh;
}

#attackCard p{
  padding: 10px;
}

.campaign-card{
  display: inline-block;
  background: white;
	color: black;
	width: 255px;
  padding: 10px;
  margin: 10px;
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
          border-radius: 10px;
	border: 2px white solid;
	-webkit-animation: skew-no-shop 1s;
	        -moz-animation: skew-no-shop 1s;
	          -o-animation: skew-no-shop 1s;
	     animation: skew-no-shop 1s;
	-webkit-animation-play-state: paused;
	        -moz-animation-play-state: paused;
	          -o-animation-play-state: paused;
	     animation-play-state: paused;
	-webkit-transition: background 1s ease-in-out;
	-o-transition: background 1s ease-in-out;
	-moz-transition: background 1s ease-in-out;
	transition: background 1s ease-in-out;
}
.campaign-card .desc{
	font-family: 'Roboto Slab', serif;
	font-size: 15px;
	margin: 2.5px;
	padding: 0;
}
.small{
  font-size: 50%;
}

.save{
z-index: 100;
  width: 100%;
  height: 100vh;
  margin: 0;
  min-height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding-top: -webkit-calc(50vh - 125px);
  padding-top: -moz-calc(50vh - 125px);
  padding-top: calc(50vh - 125px);
  bottom: 0;
  background-color: white;
}
.save .reg{
  margin-left: 10px;
  margin-right: 10px;
}

.campaign-card.normal { height: 355px; }

.campaign-card img{
	width: 84px;
	height: 116px;
	margin: 10px;
}
.boost{
	-webkit-border-radius: 30px;
	   -moz-border-radius: 30px;
	        border-radius: 30px;
	color: white;
	display: inline-block;
	margin: 1% auto;
	padding: 5px;
	-webkit-animation: color-change-2x 1s linear infinite alternate both;
	        -moz-animation: color-change-2x 1s linear infinite alternate both;
	          -o-animation: color-change-2x 1s linear infinite alternate both;
	     animation: color-change-2x 1s linear infinite alternate both;
	opacity: 0;
	-webkit-transition: opacity 1s ease-in-out;
	-o-transition: opacity 1s ease-in-out;
	-moz-transition: opacity 1s ease-in-out;
	transition: opacity 1s ease-in-out;

}
hr{
  margin: 3.75%;
  background: none;
  border: #646880 0.5px solid;
  -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
          border-radius: 100%;
}

#hover-flip{
	opacity: 1 !important;
}

hr.blu{
  border-color: #2773be;
}

hr.thin{
  border-width: 1px;
}

a, button{
	cursor: pointer;
}

#icon{
  display: inline-block;
  width: 12.5%;
  margin: 10px;
}

#logo{
	margin-top: 0;
}

*{
	font-weight: 300;
  font-family: 'Raleway', sans-serif;
  outline: none;
  text-decoration: none;
}


.inline{
  display: inline-block;
}

.hide{
  display: none !important;
}


.center{
  text-align: center;
}


.logo{
  margin: 5%;
  color: white;
}

#moneyshop, #money{color: white;}
.menu{
  color:white;

}
.menu.card{
  margin: 0 auto;
  box-shadow: none;
  opacity: 0;
  transition: all 0.5s ease-in-out;
}
.widebutton, .widebutton:disabled{
  display:inline-block;
  padding: 2.5%;
  width: 20%;
	color: white;
	-webkit-border-radius: 5px;
	   -moz-border-radius: 5px;
	        border-radius: 5px;
	background-color: #1F2424;
    -webkit-box-shadow: 0px 0px 10px #646880;
           box-shadow: 0px 0px 10px #646880;
	font-size: 25px;
  border: none;
	-webkit-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
@media (max-width :900px){
  .widebutton{
    width:90%;
  }
  .menu .card{
  display:none !important;
  }
  .disabled{
  width:90% !important;
}
}
.disabled{
  opacity: 0.2;
	color: white;
}

.widebutton:hover{
	background: white;
	color: #2773be;
}
/* ... */

